k8s/apigateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
  labels:
    app: api-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
    spec:
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      containers:
        # Our PHP-FPM application
        - image: 305696025533.dkr.ecr.us-east-1.amazonaws.com/gic-dx-its-mgt-backend-api-gateway:v1.0.0
          name: api-gateway
        - name: mysql
          image: mysql:latest
          ports:
          - containerPort: 3306
        - image: nginx:latest
          name: nginx
          volumeMounts:
          - name: nginx-config-volume
            mountPath: /etc/nginx/conf.d
