k8s/apigateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway-app
  ports:
  - port: 80
    targetPort: 80
  #   protocol: TCP
  # type: LoadBalancer
